2006-05-24  Petr Ovtchenkov  <ptr@island.corbina.net>

	* xxSQL_i.cc:  explicitly add stdexcept header.

2005-09-11  Petr Ovtchenkov  <ptr@island.plnet.ru>

	* xxSQL_i.cc: fix uninitialized var; thanks valgrind.

	* PgSQL.cc: use c_str, not data; thanks valgrind.

2005-03-25  Petr Ovtchenkov  <ptr@island.plnet.ru>

	* Makefile: revision of Makefiles---path to stlport lib and
	-lstlport went to common Makefiles.

2004-11-05  Petr Ovtchenkov  <ptr@Island.UrbanNet.Ru>

	* library naming changed.

2002-08-24  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xxSQL.cc (Repository): fix loaded libraries names

	* xxSQL.cc, xxSQL.h (Repository) add flags and code
	for requests tracing.

	* libDB: support for gcc 3.1.1; linked with libxmt,
	to avoid problems with loading applications without
	explicit usage of libxmt; varsion 0.6.3.

2002-08-03  Petr Ovtchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* libDB: Insert DB support in 'explore' source tree;
	version 0.6.2. Candidate for version 1.0.0.

2001-08-15  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* xxSQL.cc (Repository): Added version in DB-specific library name.  

2001-07-27  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* libDB: Version 0.6.1. Candidate for version 1.0.0
	
	* Makefile.gcc (Repository): provide workaround for
	bug in GNU make 3.79*---it foget old value of variable when
	tag-dependent variable use += operator, if includes of makefiles
	is too deep---near deepth of 3. This influence to libraries building.
	Add explicit link with other C++ shared libraries---this significantly
	reduce library size.

2001-07-19  Petr Ovtchenkov  <ptr@ParallelGraphics.COM>

	* libDB: Version 0.6.0. Candidate for version 1.0.0
	
	* OraSQL.cc, PgSQL.cc (Repository): Moved from interface library
	to DB wrapper library.

	* xxSQL.cc, xxSQL_i.cc, xxSQL.h, xxSQL_i.h (Repository):
	removed compile-time and link-time DB dependencies for end application.
	Load DB wrapper library at runtime via dlopen. 
