@@ -1,0 +1,7 @@
+# -*- Makefile -*- Time-stamp: <06/05/30 00:15:42 ptr>
+
+LIBNAME = DBmysql
+MAJOR = 0
+MINOR = 1
+PATCH = 0
+SRC_CC = MySQL.cc
