@@ -1,3 +1,10 @@
+2006-05-30  Petr Ovtchenkov  <ptr@island.corbina.net>
+
+	* MySQL.h, xxSQL.h, xxSQL.cc, MySQL/MySQL.cc:
+	add initial support of MySQL database.
+
+	* MySQL/Makefile.inc, MySQL/Makefile: ditto; libDBmysql 0.1.0.
+
 2006-05-24  Petr Ovtchenkov  <ptr@island.corbina.net>
 
 	* xxSQL_i.cc:  explicitly add stdexcept header.
